# protobuf

./: .gitignore  CMakeLists.txt  eugo_meson_compile.sh  eugo_pip3_wheel.sh  meson.build  pyproject.toml
.claude/skills/bazel/: SKILL.md
.claude/skills/meson/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: test_cpp.yml
ci/: Linux.bazelrc  macOS.bazelrc
python/: build_targets.bzl  convert.h  descriptor_containers.h  descriptor_pool.h
python/google/protobuf/internal/: python_edition_defaults.py
src/google/protobuf/: cpp_features.pb.h  descriptor.pb.h  meson.build  message_lite.h  reflection_visit_fields_test.cc
src/google/protobuf/compiler/: command_line_interface_tester.cc  meson.build  plugin.pb.h
src/google/protobuf/compiler/cpp/: file.cc
src/google/protobuf/compiler/java/: helpers.h  java_features.pb.h
upb/base/: upcast.h
